fixed about me alignment

--- a/main.css
+++ b/main.css
@@ -77,6 +77,15 @@ h1{
   padding-top: 50px;
   margin: 0 auto;
 }
+
+.about-me-wrapper p{
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 15px;
+  font-size: 25px;
+  text-align: justify;
+  margin: 0px 24%;
+}
 }
 
 /* ==========================
